--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,9 @@ on:
     branches:
       - main
   pull_request:
-
+permissions:
+  contents: 'read'
+  actions: 'read'
 jobs:
   main:
     runs-on: ubuntu-latest
