--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: '17'
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 18
       - uses: nrwl/nx-set-shas@v3
       - run: npm ci
       - run: npx nx print-affected --base=main --head=HEAD
