fix: test nx affected

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,8 +23,9 @@ jobs:
           node-version: 18
       - uses: nrwl/nx-set-shas@v3
       - run: npm ci
-      - run: npx nx print-affected --base=main --head=HEAD
+      - run: npx nx print-affected
       - run: npx nx print-affected --target=build
+      - run: npx nx print-affected --target=test
       - run: npx nx affected -t lint --parallel=3
       - run: npx nx affected -t test --parallel=3 --configuration=ci
       - run: npx nx affected -t build --parallel=3
