--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~20.0.3",
+    "lerna": "^6.6.2",
     "nx": "16.2.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
@@ -61,5 +62,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
-  }
+  },
+  "workspaces": [
+    "libs/*"
+  ]
 }
