fix: change scope

--- a/libs/my-react-lib/package.json
+++ b/libs/my-react-lib/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@sreeni/my-react-lib",
+  "name": "@sreeni1312/my-react-lib",
   "version": "0.0.3",
   "main": "./index.js",
   "types": "./index.d.ts",
+  "publishConfig": {
+    "@sreeni1312:registry": "https://npm.pkg.github.com/sreeni1312"
+  },
   "exports": {
     ".": {
       "import": "./index.mjs",
