--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,8 @@ jobs:
           scope: '@sreeni1312'
       - uses: nrwl/nx-set-shas@v3
       - run: npm ci
-      - run: npx lerna publish from-git --yes --no-private --conventional-commits
+      - run: npx lerna version --yes --conventional-commits
+      - run: npx lerna publish from-git --yes --no-private
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: npx nx print-affected --target=build
