--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,10 @@ jobs:
       - run: git config --global user.name "sreeni"
       - run: git config --global user.email "sreeni.san1312@gmail.com"
       - run: npx lerna version --yes --conventional-commits
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
       - run: npx lerna publish from-git --yes --no-private
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
       - run: npx nx print-affected --target=build
