--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,8 @@ jobs:
         env:
           GITHUB_AUTH_TOKEN:  ${{ github.token }}
       - run: npx lerna version --yes --conventional-commits
+        env:
+          GH_TOKEN: ${github.token}
       - run: npx lerna publish from-git --yes --no-private
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
