--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,10 +30,10 @@ jobs:
       - run: git config --global user.email "sreeni.san1312@gmail.com"
       - run: git remote set-url origin https://SreenivasanNaarayanan:$GITHUB_AUTH_TOKEN@github.com/SreenivasanNaarayanan/nx-monorepo.git
         env:
-          GITHUB_AUTH_TOKEN:  ${{ github.token }}
+          GITHUB_AUTH_TOKEN:  ${{ secrets.AUTH_TOKEN }}
       - run: npx lerna version --yes --conventional-commits
         env:
-          GH_TOKEN: ${{github.token}}
+          GH_TOKEN: ${{ github.token }}
       - run: npx lerna publish from-git --yes --no-private
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
