--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,8 +24,9 @@ jobs:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
           scope: '@sreeni1312'
+          cache: 'npm'
       - uses: nrwl/nx-set-shas@v3
-      - run: npm ci
+      - run: npm ci 
       - run: git config --global user.name "sreeni"
       - run: git config --global user.email "sreeni.san1312@gmail.com"
       - run: git remote set-url origin https://SreenivasanNaarayanan:$GITHUB_AUTH_TOKEN@github.com/SreenivasanNaarayanan/nx-monorepo.git
@@ -36,5 +37,5 @@ jobs:
           GH_TOKEN: ${{ github.token }}
       - run: npx lerna publish from-git --yes --no-private
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
       - run: npx nx print-affected --target=build
