--- a/libs/my-react-lib/package.json
+++ b/libs/my-react-lib/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@sreeni1312/my-react-lib",
-  "version": "0.3.0",
+  "version": "0.2.0",
   "main": "./index.js",
   "types": "./index.d.ts",
+  "dependencies": {
+    "@sreeni1312/reusable-lib": "*"
+  },
   "exports": {
     ".": {
       "import": "./index.mjs",
